Fix uneven badge height

--- a/assets/css/utilities/badge.scss
+++ b/assets/css/utilities/badge.scss
@@ -1,5 +1,5 @@
 .badge {
-  padding: 0.4rem 0.5rem 0.2rem;
+  padding: 0.3rem 0.5rem 0.2rem;
   border: 1px solid var(--primary);
   color: var(--primary);
   text-transform: uppercase;
